feat: added Simple_Http_Server and fixed Dog machine category

--- a/_posts/2025-03-07-Dog.md
+++ b/_posts/2025-03-07-Dog.md
@@ -1,7 +1,7 @@
 ---
 title: Dog - HackTheBox
 date: 2025-03-07 14:30:00 +0100
-categories: [tryhackme, linux]
+categories: [hackthebox, linux]
 tags: [enumeration, privEsc]
 author: omar 
 description: HackTheBox easy machine from the season 7.
